- summary row label should not be -1 in actions now - all columns should not be "low population excluded" by default now. can switch to exclude low population when viewing all columns table - i18n on new icon - i18n on Actions table column labels - fixed truncation which should hopefully fix most of display issues when viewing all columns - subtables have more space efficient padding now
git-svn-id: http://dev.piwik.org/svn/trunk@768 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/CoreHome/templates/datatable.css
+++ b/plugins/CoreHome/templates/datatable.css
@@ -20,6 +20,13 @@
 	width: 535px;
 }
 
+.subdataTableWrapper{
+	width: 95%;
+}
+.subdataTableAllColumnsWrapper {
+	width: 95%;
+}
+
 .dataTableActionsWrapper {
 	width: 500px;
 }
@@ -71,7 +78,7 @@ table.dataTable th {
 	border-top: 1px solid #C1DAD7;
 	text-align: left;
 	padding: 6px 6px 6px 12px;
-	background: #D4E3ED url(images/bg_header.jpg) no-repeat;
+	background: #D4E3ED url(images/bg_header.jpg) repeat-x;
 }
 
 table.dataTable th.columnSorted {
@@ -136,7 +143,6 @@ table.dataTable td #urlLink {
 /* SUBDATATABLE */ /* a datatable inside another datatable */
 table.subDataTable {
 	background: #FFFFFF;
-	width: 95%;
 	margin: 10px;
 }
 
@@ -168,7 +174,6 @@ table.subDataTable td {
 }
 
 table.subDataTable td,table.subDataTable td a {
-	padding: 0.3em 1em;
 	color: #615B53;
 }
 
@@ -182,6 +187,9 @@ table.subDataTable td.label {
 
 table.subDataTable td.labelodd,table.subDataTable td.labelodd a {
 	background: #ffffff;
+}
+table.subDataTable td.label {
+	padding: 1px;
 }
 
 /* misc SPAN and DIV */
@@ -259,11 +267,11 @@ table thead div {
 	display: none;
 }
 
-.subDataTable #exportDataTable {
+.subDataTable #dataTableFooterIcons {
 	height: 0px;
 }
 
-#exportDataTable {
+#dataTableFooterIcons {
 	float: right;
 	height: 18px;
 }
@@ -272,11 +280,11 @@ table thead div {
 	float: right;
 }
 
-#exportDataTableShow {
+#dataTableFooterIconsShow {
 	float: right;
 }
 
-#exportDataTable,#exportDataTable a {
+#dataTableFooterIcons,#dataTableFooterIcons a {
 	text-decoration: none;
 	color: #8894B1;
 	font-size:0.9em;
@@ -293,15 +301,18 @@ table thead div {
 	padding: 0.5em;
 }
 
+#tooltip h3 {
+	margin:0;
+	padding:0;
+}
 #tooltip {
 	position: absolute;
 	z-index: 3000;
 	border: 1px solid #111;
 	background-color: #eee;
-	padding-left: 5px;
-	padding-right: 5px;
 	opacity: 0.85;
 	font-size: 0.7em;
+	padding:7px;
 }
 
 /* Actions table */
